# bwb-stellar

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/skills/scf-budget-builder/: SKILL.md
.claude/skills/scf-competitor-analyst/: SKILL.md
.claude/skills/scf-interest-form-drafter/: SKILL.md
.claude/skills/scf-prescreen-checker/: SKILL.md
.claude/skills/scf-referral-preparer/: SKILL.md
.claude/skills/scf-reviewer/: SKILL.md
.claude/skills/scf-round-reviewer/: SKILL.md
.claude/skills/scf-round-watcher/: SKILL.md
.claude/skills/scf-submission-drafter/: SKILL.md
.claude/skills/scf-tranche-reporter/: SKILL.md
.github/workflows/: ci.yml
audit/: .gitkeep
contracts/distribution/: Cargo.toml
contracts/distribution/src/: lib.rs
contracts/kyc-whitelist/: Cargo.toml
contracts/kyc-whitelist/src/: lib.rs
contracts/real-estate-token/: Cargo.toml
contracts/real-estate-token/src/: lib.rs
docs/: 01-protocol-overview.md  02-contracts.md  03-integration-architecture.md  architecture.md  brla-anchor.md  guide-project.md  kyc-flow.md  scf-deliverables.md  soroban-contracts.md
scripts/: deploy-mainnet.sh  deploy-testnet.sh  fund-testnet-account.sh
sdk/: package.json
sdk/src/: anchor.ts  client.ts  index.ts  kyc.ts  token.ts
