[package]
name = "kyc-whitelist"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "BWB KYC whitelist — CVM 88 compliant transfer restrictions on Soroban"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
