[package]
name = "real-estate-token"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "BWB CVM-regulated real estate RWA token on Stellar/Soroban"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
kyc-whitelist = { path = "../kyc-whitelist" }
